Add custom font

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,35 @@
   <title>Document</title>
 </head>
 <body>
-  <h1 class="hello">This is from the template</h1>
+  <main id="app">
+    <div class="left-page">
+      <header>
+        <!-- logo -->
+        <h1></h1>
+      </header>
+    </div>
+    <div class="right-page">
+      <section class="top"></section>
+      <section class="middle">
+        <fieldset>
+          <label for="first_name"></label>
+          <input type="text" name="first_name" id="first_name" placeholder="First Name">
+          <label for="last_name"></label>
+          <input type="text" name="last_name" id="last_name" placeholder="Last Name">
+        </fieldset>
+        <fieldset>
+          <label for="email"></label>
+          <input type="email">
+        </fieldset>
+        <fieldset>
+
+        </fieldset>
+      </section>
+      <section class="bottom">
+        <button type="submit"></button>
+        <p></p>
+      </section>
+    </div>
+  </main>
 </body>
 </html>
