Edit password field

--- a/src/index.html
+++ b/src/index.html
@@ -45,11 +45,11 @@
                 <input type="tel">
               </p>
             </fieldset>
-            <fieldset>
+            <fieldset id="password_container">
               <p class="form-input-container">
                 <label for="password">password</label>
-                <input min="8" class="error" type="password">
-                <span class="error">*Password is invalid</span>
+                <input minlength="8" class="error" type="password">
+                <span class="error">*Password is invalid <br>(need 8 characters or more)</span>
               </p>
               <p class="form-input-container">
                 <label for="password_confirm">password confirm</label>
